# django_boilerplate

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .sample_env  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.txt  tox.ini  uwsgi.ini
deploy/: BaseDockerfile  Dockerfile
deploy/kubernetes/helm_chart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
deploy/kubernetes/helm_chart/templates/: NOTES.txt  _helpers.tpl  celery-deployment.yaml  configmap.yaml  deployment.yaml  ingress.yaml  migration.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/helm_chart/templates/tests/: test-connection.yaml
deploy/scripts/: build_base_image.sh  build_image.sh  values_sample.sh
proj/: asgi.py  settings.py
requirements/: requirements-base.in  requirements-base.txt  requirements-dev.example.in  requirements-dev.in  requirements-dev.txt  requirements-testing.in  requirements-testing.txt
src/: manage.py
src/apps/tasks_management/: apps.py  scheduling.py  tasks.py
src/apps/tasks_management/deployment_notes/: README.md
src/proj/: asgi.py  urls.py  wsgi.py
src/proj/settings/: __init__.py  base.py  build.py  dev.py  prod.py  test.py
