[tool.poetry]
name = "PROJECTNAME"
version = "1.0.0"
description = "Django boilerplate"
authors = [
    "mohsen mirzakhani <mohsen.mkh88@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.7.4"
Django = "3.0.6"
django-redis="4.11.0"
djangorestframework="3.11.0"
django-constance = {version = "^2.6.0", extras = ["database"]}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | \.idea
    | \.vscode
    | \.circleci
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
force_single_line = true

known_third_party = ["django", "django-environ", "sentry_sdk"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
